       controller status, and :idle which toggles the idle status.
     * New "Blindfold Replays" option: Observers may check a box in the
       lobby so that if they join a game, they will be "blindfolded" and see
       only a black screen until they are given control of a side.
 * Units:
   * New baseframes for Jundi, Muharib, Batal, Qatif-al-nar, Qudafi, Rasikh.
 * User interface:
   * New UI for displaying errors detected during the core and add-on WML
     loading process (parser and preprocessor errors), including the
     ability to copy the report to clipboard.
   * New UI for displaying the notification that a screenshot or map
     screenshot was successfully saved to disk, including options to open it
     in an external application, copy the path to clipboard, or browse the
     screenshots folder.
   * Force grayscale antialiasing for text rendered using Cairo/Pango (e.g. by
     GUI2) on Windows to work around ClearType-induced glitches (bug #21648).
   * Fixed bug #21584: Properly redraw the minimap when the minimap is
     resized.
   * Fixed: Enable blurring in the title screen.
   * Added descriptions to the options in Preferences -> Display -> Themes.
   * New sound played to signal the start of an MP game.
 * WML engine:
   * WML loading phase errors are reported to stderr in a new indented format.
   * Implemented [true] and [false] ConditionalWML tags, which describe a
     condition that always yields true or false, respectively.
   * Fixed: Disallow change and remove sections without an id in the ThemeWML.
   * Added [theme] description attribute for including a description of the
     theme that will be displayed in Preferences.
   * [theme] name attribute is now expected to be translatable and used only
     for the theme selection UI. Existing [theme]s need to be converted to
     have a separate 'id' attribute.
   * [endlevel] now has two optional subtags [next_scenario_settings],